--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
     <link rel="stylesheet" href="/assets/css/sobre/sobre.css" />
     <link rel="stylesheet" href="/assets/css/sobre/sobre-descricao.css" />
     <link rel="stylesheet" href="/assets/css/sobre/sobre-titulo.css" />
+    <link rel="stylesheet" href="/assets/css/receita/receita.css">
+    <link rel="stylesheet" href="/assets/css/receita/receita-botao.css">
+    <link rel="stylesheet" href="/assets/css/receita/receita-conteudo.css">
+    <link rel="stylesheet" href="/assets/css/receita/receita-descricao.css">
+    <link rel="stylesheet" href="/assets/css/receita/receita-imagem.css">
+    <link rel="stylesheet" href="/assets/css/receita/receita-titulo.css">
+    <link rel="stylesheet" href="/assets/css/receitas.css">
   </head>
   <body>
     <header class="cabecalho">
@@ -57,7 +64,7 @@
         Nossas receitas ajudam você a aproveitar melhor os alimentos,
         economizar, ganhar tempo e praticidade
       </p>
-
+</section>
       <section class="receitas">
         <div class="receita">
           <img
@@ -144,7 +151,26 @@
           </div>
         </div>
       </section>
+      <section class="quem-somos">
+        <h3 class="quem-somos__titulo">Quem somos</h3>
+        <p class="quem-somos__descricao">Conheça a comunidade por trás da iniciativa</p>
+        <div class="pessoas">
+            <div class="pessoa">
+                <div class="pessoa__imagem pessoa__imagem--roberta"></div>
+                <span class="pessoa__nome">Roberta</span>
+                <span class="pessoa__funcao">Conteúdo</span>
+            </div>
+            <div class="pessoa">
+                <div class="pessoa__imagem pessoa__imagem--marcela"></div>
+                <span class="pessoa__nome">Marcela</span>
+                <span class="pessoa__funcao">Chef de cozinha</span>
+            </div>
+            <div class="pessoa">
+                <div class="pessoa__imagem pessoa__imagem--andreia"></div>
+                <span class="pessoa__nome">Andréia</span>
+                <span class="pessoa__funcao">Pequena Produtora</span>
+            </div>
+        </div>
     </section>
-    <section></section>
   </body>
 </html>
