🧱 ci: Modificaçao no banner e adição rodape

--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
       </nav>
     </header>
     <section class="banner">
-      <img
+      <div
         class="banner__imagem"
         src="/assets/img/banner.jpg"
         alt="banner frutas"
-      />
+      ></div>
       <h2 class="banner__titulo">Reaproveitando melhor os alimentos</h2>
     </section>
     <section class="sobre">
@@ -185,5 +185,8 @@
         </div>
       </div>
     </section>
+    <footer class="rodape">
+      Contato: exemplo@email.com.br
+  </footer>
   </body>
 </html>
