--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <link rel="stylesheet" href="/assets/css/receita/receita-titulo.css" />
     <link rel="stylesheet" href="/assets/css/receitas.css" />
     <link rel="stylesheet" href="/assets/css/quemSomos/quemSomos.css" />
+    <link rel="stylesheet" href="/assets/css/logo.css">
     <link
       rel="stylesheet"
       href="/assets/css/quemSomos/quemSomos-descricao.css"
@@ -40,6 +41,7 @@
     <link rel="stylesheet" href="/assets/css/pessoa/pessoa-imagem.css" />
     <link rel="stylesheet" href="/assets/css/pessoa/pessoa-nome.css" />
     <link rel="stylesheet" href="/assets/css/pessoas.css" />
+    <link rel="stylesheet" href="/assets/css/rodape.css">
   </head>
   <body>
     <header class="cabecalho">
